syntax = "proto3";

package book;

option go_package = "./pkg/book-service/pb";

service BookService{
    rpc GetBooks(GetBooksRequest) returns (GetBooksResponse){}
    rpc GetAuthors(GetAuthorsRequest) returns (GetAuthorsResponse){}
}

// Get all books
message GetBooksRequest{}
message GetBooksResponse{
    repeated Book books = 1;
}

// Get al authors
message GetAuthorsRequest{}
message GetAuthorsResponse{
    repeated Author authors = 1;
}

// models
message Book{
    string bookid = 1;
    string title = 2;
    Author author = 3;
}

message Author{
    string authorid = 1;
    string name = 2;
    string surname = 3;
}